2006-09-13  Matthias Wimmer  <m@tthias.eu>

    * jsm/jsm.h: ACL support to configure admin access
    * jsm/modules/mod_disco.c: same
    * jsm/modules/mod_announce.c: same
    * jsm/modules/mod_admin.c: same
    * jsm/util.c: same
    * jabberd/jabberd.h: same
    * jabberd/acl.c: same
    * jabberd/config.c: same
    * jabberd/lib/jabberdlib.h: same

2006-09-09  Matthias Wimmer  <m@tthias.eu>

    * jsm/modules/mod_offline.c: by default not storing headline and groupchat
	messages offline.

2006-09-08  Matthias Wimmer  <m@tthias.eu>

    * jabberd/lib/pproxy.c: removing legacy code
    * jabberd/lib/genhash.c: same
    * jabberd/lib/jabberdlib.h: same
    * jabberd/lib/jutil.c: same
    * jabberd/lib/socket.c: same
    * jsm/jsm.h: same
    * jsm/util.c: same
    * jsm/modules/mod_admin.c: moving admin functionality slowly from browse
	to disco
    * jsm/modules/mod_browse.c: same
    * jsm/modules/mod_disco.c: same
    * jabberd/lib/jabberdlib.h: automated disco#info result generation
    * jsm/jsm.h: same
    * jsm/modules/mod_disco.c: same
    * jsm/modules/mod_browse.c: same
    * jsm/modules/mod_last.c: same
    * jsm/modules/mod_offline.c: same
    * jsm/modules/mod_register.c: same
    * jsm/modules/mod_version.c: same
    * jsm/modules/mod_time.c: same
    * jsm/modules.c: same

2006-09-07  Matthias Wimmer  <m@tthias.eu>

    * xdb_sql/xdb_sql.cc: converting xdb_sql.c to C++, using sstream

2006-09-02  Matthias Wimmer  <m@tthias.eu>

    * jabberd/mio.c: fixing fd_set vulnerability (closes bug 66)

2006-07-24  Matthias Wimmer  <m@tthias.eu>

    * jsm/deliver.c: update in handling of new sc protocol

2006-07-08  Matthias Wimmer  <m@tthias.eu>

    * jabberd/lib/jid.c: introducing jid_user_pool() function
    * jabberd/lib/jabberdlib.h: same
    * jsm/sessions.c: freeing memory earlier (closes bug 55)

2006-06-23  Matthias Wimmer  <m@tthias.eu>

    * jabberd/lib/genhash.c: fixing bug in unused code (see bugzilla #46)
